NGS fixes after demo feedback (#255)
* Fix shelf display and horizontal scroll cut off

* Group offers within drawer by fare brand

* Version bump

--- a/src/styles/components/NGSTable.css
+++ b/src/styles/components/NGSTable.css
@@ -1,7 +1,3 @@
-.ngs-table {
-  overflow-x: auto;
-}
-
 .ngs-table_table {
   border-radius: 4px;
   border: 1px solid var(--GREY-100);
@@ -94,7 +90,6 @@
 .ngs-table_expanded {
   padding: 0;
   cursor: auto;
-  overflow-x: auto;
   max-width: 1280px;
 }
 
@@ -103,7 +98,11 @@
   padding: 32px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  overflow-x: auto;
+}
+
+.ngs-table_expanded > div > button {
+  margin: auto;
 }
 
 .ngs-table_table-data--expanded {
